@@ -208,11 +208,11 @@ sub check_password {
         #check for valid session
         if ( !LedgerSMB::Auth::session_check( $cookie{${LedgerSMB::Sysconfig::cookie_name}}, $form ) ) {
             &getpassword(1);
-            exit;
+            return;
         }
     }
     else {
-        exit;
+        return;
     }
 }
 
