@@ -262,7 +262,6 @@ sub run_backup {
             print $data;
         }
         unlink $backupfile;
-        exit;
     } else {
         $request->error($request->{_locale}->text("Don't know what to do with backup"));
     }
@@ -808,7 +807,7 @@ sub save_user {
                 format => 'HTML',
         );
         $template->render($request);
-        exit;        
+        return;
     }
     if ($request->{perms} == 1){
          for my $role (
